# riddler_nation

./: README.md
20210115_mysterious_numbers/: README.md  classic.ipynb  pyproject.toml  solution.md
20210122_ski_the_slopes/: README.md  express.ipynb  pyproject.toml  solution.md
