[tool.poetry]
name = "20210115_mysterious_numbers"
version = "0.1.0"
description = "Riddler Nation 2021-01-15"
authors = ["Damien Ready <dbready@gmail.com>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.8"
z3-solver = "^4.8.9"
jupyterlab = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
