[tool.poetry]
name = "20210122_ski_the_slopes"
version = "0.1.0"
description = ""
authors = ["Damien Ready <dbready@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
jupyterlab = "^3.0.5"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
